fix website title

--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -39,7 +39,7 @@ const featuredPosts = [
 ---
 
 <Layout
-	title="The Astro Blog"
+	title="Blog"
 	description="Get all the latest news from the Astroverse."
 	image={{ src: "/og/blog.jpg", alt: "What’s new in the Astro ecosystem" }}
 >
