switch back to hybrid rendering

--- a/src/pages/_components/Hero.astro
+++ b/src/pages/_components/Hero.astro
@@ -13,7 +13,7 @@ const logos = [
 ---
 
 <section class="landing-section relative overflow-x-hidden pt-14 sm:pt-20 lg:pt-32">
-	<PillLink title="Our brand new blog here!" subtitle="Learn more" href="/blog/astro-3" class="mb-8" />
+	<PillLink title="Our brand new blog here!" subtitle="Learn more" href="/blog/welcome" class="mb-8" />
 	<PageTitleBlock
 		lg
 		body="Dive into a curated collection of weeklies covering a wide spectrum of developer languages, frameworks, and technologies. "
