--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -29,10 +29,7 @@ const allPages = [...Array(page.lastPage).keys()].map((num) => {
 const allPosts = await getCollection("blog")
 
 const featuredPosts = [
-	"images",
-	"2023-web-framework-performance-report",
-	"hybrid-rendering",
-	"vercel-official-hosting-partner",
+	"welcome"
 ]
 	.map((slug) => allPosts.find((post) => post.slug === slug))
 	.filter(Boolean) as CollectionEntry<"blog">[]
