--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -21,6 +21,7 @@ export async function getStaticPaths() {
 
 const { post } = Astro.props
 
+// eslint-disable-next-line @typescript-eslint/unbound-method
 const { data, render } = post
 const { Content } = await render()
 
