--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -8,7 +8,7 @@
 
 @font-face {
 	font-family: "Raleway";
-	src: url("/fonts/Raleway-Light.ttf") format('truetype');
+	src: url("/fonts/Raleway-Light.ttf") format("truetype");
 	font-weight: 300;
 	font-style: normal;
 	font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
 	font-family: "Raleway";
-	src: url("/fonts/Raleway-Regular.ttf") format('truetype');
+	src: url("/fonts/Raleway-Regular.ttf") format("truetype");
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
 	font-family: "Raleway Wide";
-	src: url("/fonts/Raleway-SemiBold.ttf") format('truetype');
+	src: url("/fonts/Raleway-SemiBold.ttf") format("truetype");
 	font-weight: 600;
 	font-style: normal;
 	font-stretch: wider;
