--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,11 +32,11 @@ const groups: LinkGroup[] = [
 		title: "Community",
 		items: [
 			{
-				href: "https://github.com/withastro/astro/blob/main/CONTRIBUTING.md",
+				href: "https://discord.gg/Bk6TCaPu",
 				text: "Contributing",
 			},
 			{
-				href: "https://discord.com/",
+				href: "https://discord.gg/Bk6TCaPu",
 				text: "Join our Discord",
 			},
 		],
