--- a/src/pages/weeklies/submit/index.astro
+++ b/src/pages/weeklies/submit/index.astro
@@ -251,7 +251,7 @@ if (prefilled != null) {
 							<input
 								id="themeName"
 								name="themeName"
-								placeholder="My super cool theme"
+								placeholder="My super cool weekly"
 								required
 								class="input"
 								value={prefilled?.get("themeName")}
@@ -260,7 +260,7 @@ if (prefilled != null) {
 
 						<script>
 							import { createEffect, createSignal } from "solid-js"
-							import { getElement, getElements } from "~/helpers/dom.js"
+import { getElement, getElements } from "~/helpers/dom.js"
 
 							const paidStatusOptions = getElements("[name=paidStatus]", HTMLInputElement)
 							const themeUrlLabel = getElement("[for=themeUrl]", HTMLLabelElement)
@@ -304,7 +304,7 @@ if (prefilled != null) {
 									id="themeUrl"
 									name="themeUrl"
 									type="url"
-									placeholder="https://github.com/me/my-theme"
+									placeholder="https://example.com/my-weekly"
 									required
 									class="input"
 									value={prefilled?.get("themeUrl")}
@@ -317,7 +317,7 @@ if (prefilled != null) {
 									id="themeDemoUrl"
 									name="themeDemoUrl"
 									type="url"
-									placeholder="https://example.com/my-theme-preview"
+									placeholder="https://example.com/my-weekly-preview"
 									class="input"
 									value={prefilled?.get("themeDemoUrl")}
 								/>
