fix(social): update discord link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,11 +32,11 @@ const groups: LinkGroup[] = [
 		title: "Community",
 		items: [
 			{
-				href: "https://discord.gg/Bk6TCaPu",
+				href: "https://discord.gg/4H3xycR",
 				text: "Contributing",
 			},
 			{
-				href: "https://discord.gg/Bk6TCaPu",
+				href: "https://discord.gg/4H3xycR",
 				text: "Join our Discord",
 			},
 		],
