--- a/src/pages/_components/Sponsors.astro
+++ b/src/pages/_components/Sponsors.astro
@@ -1,6 +1,6 @@
 ---
-import { Icon } from "astro-icon"
-import MainSponsorItem from "./MainSponsorItem.astro"
+import { Icon } from "astro-icon/components";
+import MainSponsorItem from "./MainSponsorItem.astro";
 
 const sponsors = [
 	{ src: "sponsors/netlify", alt: "Netlify Logo", href: "https://netlify.com" },
