fix: pnpm run lint

--- a/src/components/Accordion.astro
+++ b/src/components/Accordion.astro
@@ -15,7 +15,7 @@ const { summary, class: className, ...attrs } = Astro.props
 	>
 		<span>{summary}</span>
 		<ChevronIcon
-			class="chevron h-4 w-4 rotate-0 transition-transform duration-300 ease-in-out group-open:-rotate-180"
+			class="chevron size-4 rotate-0 transition-transform duration-300 ease-in-out group-open:-rotate-180"
 		/>
 	</summary>
 
