--- a/src/components/NotificationBanner.astro
+++ b/src/components/NotificationBanner.astro
@@ -14,7 +14,7 @@ const { uid } = Astro.props
 	<p class="mr-6">
 		<slot />
 	</p>
-	<button class="absolute right-0 top-0 flex h-10 w-10 items-center justify-center">
+	<button class="absolute right-0 top-0 flex size-10 items-center justify-center">
 		<span class="sr-only">Hide banner</span>
 		<XIcon class="h-5" aria-hidden="true" />
 	</button>
