--- a/src/components/form/FormRadio.astro
+++ b/src/components/form/FormRadio.astro
@@ -10,7 +10,7 @@ const { label, ...props } = Astro.props
 	<input
 		{...props}
 		type="radio"
-		class="h-4 w-4 appearance-none rounded-full border border-astro-gray-300 transition checked:rounded-none checked:border-0 checked:bg-blue-purple-gradient hover:border-astro-gray-400 checked:hover:brightness-75"
+		class="size-4 appearance-none rounded-full border border-astro-gray-300 transition checked:rounded-none checked:border-0 checked:bg-blue-purple-gradient hover:border-astro-gray-400 checked:hover:brightness-75"
 	/>
 	{label}
 </label>
