--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -57,7 +57,7 @@ const beliefs = [
 				<div
 					class="hero-graphic relative scale-150 md:scale-125 lg:translate-x-16 xl:translate-x-32"
 				>
-					<EcosystemIllustration class="h-full w-full" />
+					<EcosystemIllustration class="size-full" />
 					<AstroLogomark class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2" />
 				</div>
 			</div>
@@ -161,5 +161,4 @@ const beliefs = [
 		background: linear-gradient(266.93deg, #f8e42e 0%, #ff7d54 100%);
 		mask-image: radial-gradient(rgba(0, 0, 0, 0.7), transparent 70%);
 	}
-
 </style>
