--- a/src/pages/weeklies/submit/success.astro
+++ b/src/pages/weeklies/submit/success.astro
@@ -1,6 +1,6 @@
 ---
-import MainLayout from "~/layouts/MainLayout.astro";
-import houston from "./_assets/houston_love.webp";
+import MainLayout from "~/layouts/MainLayout.astro"
+import houston from "./_assets/houston_love.webp"
 ---
 
 <MainLayout>
