--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -22,7 +22,7 @@ const {
 	image = siteInfo.image,
 	canonicalURL = new URL(Astro.request.url, Astro.site),
 	pageType = "website",
-} = Astro.props 
+} = Astro.props
 
 const title = [Astro.props.title, siteInfo.name].filter(Boolean).join(" | ")
 const resolvedImage = {
@@ -42,21 +42,9 @@ const resolvedImage = {
 <script src="https://cdn.usefathom.com/script.js" data-site="EZBHTSIG" defer></script>
 
 <!-- Font preloads -->
-<link
-	rel="preload"
-	href="/fonts/Raleway-Regular.ttf"
-	as="font"
-	type="font/ttf"
-	crossorigin
-/>
+<link rel="preload" href="/fonts/Raleway-Regular.ttf" as="font" type="font/ttf" crossorigin />
 
-<link
-	rel="preload"
-	href="/fonts/IBMPlexMono-Regular.ttf"
-	as="font"
-	type="font/ttf"
-	crossorigin
-/>
+<link rel="preload" href="/fonts/IBMPlexMono-Regular.ttf" as="font" type="font/ttf" crossorigin />
 
 <link rel="preload" href={Inter} as="font" type="font/ttf" crossorigin />
 
