--- a/src/components/Blockquote.astro
+++ b/src/components/Blockquote.astro
@@ -1,12 +1,10 @@
 ---
-import { Icon } from "astro-icon/components";
+import { Icon } from "astro-icon/components"
 ---
 
 <figure class="relative my-8 border-y-[3px] border-astro-gray-500 py-4">
 	<Icon name="quote" class="mb-2 s-10 md:absolute md:right-[calc(100%+1rem)] md:top-6" />
-	<blockquote
-		class="font-raleway text-xl font-medium text-white md:text-[32px] md:leading-[40px]"
-	>
+	<blockquote class="font-raleway text-xl font-medium text-white md:text-[32px] md:leading-[40px]">
 		<slot name="quote" />
 	</blockquote>
 	<figcaption class="mt-4 text-right font-mono text-astro-pink-light">
