--- a/src/components/Checkbox.astro
+++ b/src/components/Checkbox.astro
@@ -17,7 +17,7 @@ const { id, name, label, class: className, ...attrs } = Astro.props
 		id={id}
 		name={name}
 		type="checkbox"
-		class="h-0 w-0 cursor-pointer appearance-none"
+		class="size-0 cursor-pointer appearance-none"
 		{...attrs}
 	/>
 	<span>{label}</span>
