--- a/src/components/HeaderDrawerContent.astro
+++ b/src/components/HeaderDrawerContent.astro
@@ -1,6 +1,6 @@
 ---
-import siteInfo from "~/data/site-info.js";
-import SocialLinks from "./SocialLinks.astro";
+import siteInfo from "~/data/site-info.js"
+import SocialLinks from "./SocialLinks.astro"
 
 const socialLinks = siteInfo.socialLinks.filter((link) => !link.footerOnly)
 ---
@@ -9,9 +9,9 @@ const socialLinks = siteInfo.socialLinks.filter((link) => !link.footerOnly)
 	aria-label="Primary"
 	class="heading-3 flex flex-col divide-y divide-astro-gray-500 text-left [&>*]:p-6"
 >
-	<a href="/weeklies/" rel="prefetch"  class="link"> Weeklies</a>
+	<a href="/weeklies/" rel="prefetch" class="link"> Weeklies</a>
 	<a href="/blog/" rel="prefetch" class="link"> Blog</a>
-	<a href="/weeklies/submit/" rel="prefetch"  class="link"> Submit</a>
+	<a href="/weeklies/submit/" rel="prefetch" class="link"> Submit</a>
 
 	<div class="flex flex-col gap-6">
 		<SocialLinks links={socialLinks} />
