--- a/src/components/ResourcesMenu.astro
+++ b/src/components/ResourcesMenu.astro
@@ -8,9 +8,7 @@ import PaletteIcon from "~/icons/PaletteIcon.jsx"
 <details id="resources-menu" class="group relative">
 	<summary class="accordion link flex cursor-pointer items-center gap-2">
 		Resources
-		<ChevronIcon
-			class="inline-block h-4 w-4 rotate-0 transition-transform group-open:-rotate-180"
-		/>
+		<ChevronIcon class="inline-block size-4 rotate-0 transition-transform group-open:-rotate-180" />
 	</summary>
 	<ul
 		class:list={[
@@ -19,11 +17,11 @@ import PaletteIcon from "~/icons/PaletteIcon.jsx"
 
 			// positioning
 
-			"absolute top-full left-0 translate-y-2",
+			"absolute left-0 top-full translate-y-2",
 
 			// panel styling
 
-			"rounded bg-astro-gray-100 p-1 text-astro-gray-700 min-w-[150px] shadow-md",
+			"min-w-[150px] rounded bg-astro-gray-100 p-1 text-astro-gray-700 shadow-md",
 
 			// transitioning
 
@@ -39,7 +37,7 @@ import PaletteIcon from "~/icons/PaletteIcon.jsx"
 				rel="prefetch"
 				class="flex items-center gap-2 rounded p-3 leading-none transition hover:bg-black/10"
 			>
-				<PaletteIcon class="h-4 w-4" /> Themes
+				<PaletteIcon class="size-4" /> Themes
 			</a>
 		</li>
 		<li>
@@ -48,7 +46,7 @@ import PaletteIcon from "~/icons/PaletteIcon.jsx"
 				rel="prefetch"
 				class="flex items-center gap-2 rounded p-3 leading-none transition hover:bg-black/10"
 			>
-				<LayersIcon class="h-4 w-4" /> Integrations
+				<LayersIcon class="size-4" /> Integrations
 			</a>
 		</li>
 		<li>
@@ -56,7 +54,7 @@ import PaletteIcon from "~/icons/PaletteIcon.jsx"
 				href="https://docs.astro.build/en/tutorial/0-introduction/"
 				class="flex items-center gap-2 rounded p-3 leading-none transition hover:bg-black/10"
 			>
-				<OpenBookIcon class="h-4 w-4" /> Tutorials
+				<OpenBookIcon class="size-4" /> Tutorials
 			</a>
 		</li>
 	</ul>
