--- a/src/pages/_components/Hero.astro
+++ b/src/pages/_components/Hero.astro
@@ -1,6 +1,6 @@
 ---
-import PageTitleBlock from "~/components/PageTitleBlock.astro";
-import PillLink from "./PillLink.astro";
+import PageTitleBlock from "~/components/PageTitleBlock.astro"
+import PillLink from "./PillLink.astro"
 
 const logos = [
 	{ src: "logos/google", alt: "Google Logo", class: "py-1 -mb-1 md:-mb-2 lg:-mb-2.5" },
@@ -13,7 +13,12 @@ const logos = [
 ---
 
 <section class="landing-section relative overflow-x-hidden pt-14 sm:pt-20 lg:pt-32">
-	<PillLink title="Our brand new blog here!" subtitle="Learn more" href="/blog/welcome" class="mb-8" />
+	<PillLink
+		title="Our brand new blog here!"
+		subtitle="Learn more"
+		href="/blog/welcome"
+		class="mb-8"
+	/>
 	<PageTitleBlock
 		lg
 		body="Dive into a curated collection of weeklies covering a wide spectrum of developer languages, frameworks, and technologies. "
@@ -27,9 +32,7 @@ const logos = [
 	</PageTitleBlock>
 
 	<div class="mb-14 mt-8 flex w-full justify-center gap-6 sm:mb-16 md:mb-20 lg:mb-24 xl:mb-28">
-		<a href="/weeklies" class="button button-white">
-			Check weeklies
-		</a>
+		<a href="/weeklies" class="button button-white"> Check weeklies</a>
 	</div>
 </section>
 
