--- a/src/pages/_components/PillLink.astro
+++ b/src/pages/_components/PillLink.astro
@@ -13,7 +13,7 @@ const { title, subtitle, href, class: className } = Astro.props
 
 <aside
 	class:list={[
-		"relative flex gap-2 rounded-full text-xs md:text-sm transition-colors duration-150 hover:bg-black/20 hover:text-astro-gray-200",
+		"relative flex gap-2 rounded-full text-xs transition-colors duration-150 hover:bg-black/20 hover:text-astro-gray-200 md:text-sm",
 		className,
 	]}
 >
@@ -21,7 +21,7 @@ const { title, subtitle, href, class: className } = Astro.props
 		<span class="pill relative m-px rounded-full px-3 py-1">{title}</span>
 		<div class="flex items-center gap-1">
 			<span>{subtitle}</span>
-			<ChevronIcon class="inline h-3 w-3 -rotate-90" aria-hidden="true" />
+			<ChevronIcon class="inline size-3 -rotate-90" aria-hidden="true" />
 		</div>
 	</a>
 </aside>
